Cambio de icono y arreglo del layout de jugar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,13 @@
         <item>La sexualidad es:;Una elección impuesta;Un sentimiento;*Una elección personal;Un valor cultural</item>
         <item>¿A partir de que edad se deben tener relaciones sexuales?;Éntrelos 15 y los 18 años.;Cuando uno es mayor de edad.;*No existe una edad establecida, cada persona decide cuando esta preparada.;En cuanto empiezan a tener relaciones mis amigos.</item>
         <item>¿Esta mal no haber tenido nunca relaciones sexuales?;Si, porque se ríen de ti.;No, porque la persona no es libre para decirlo.;*No, cada persona decide cuando se siente preparada.;Si, porque no sabes lo que es el sexo.</item>
+        <item>Las ETS son enfermedades infecciosas que tienen en común:;*Su transmisión es por contacto sexual;Su transmisión es por cualquier tipo de contacto;Están causados siempre por bacterias;No requieren tratamiento en ningún caso</item>
+        <item>El herpes genital es causado por:;Un hongo;Una bacteria;*Un virus;Un parásito</item>
+        <item>Las ETS se llaman así porque si vía de contagio es:;Intravenosa;*Sexual;Bucal;A través de la madre</item>
+        <item>¿Pueden las mujeres embarazadas transmitir ETS a su hijo?;*Si;No</item>
+        <item>¿Qué quiere decir la palabra SIDA?;Síndrome de Inmunodeficiencia Anterior;Sistema Inmunológico Anterior;Síndrome Inmunológico Adquirido;*Síndrome de Inmunodeficiencia Adquirida</item>
+        <item>¿Qué quiere decir ser portador?;Llevar las muestras de sangre al médico;Estar infectado por el virus del VIH;*Padecer la enfermedad del SIDA;Padecer de ETS</item>
+        <item>¿Qué son comportamientos sexuales de riego?;Tener una pareja estable.;*Tener relaciones sexuales sin protección;Tener reaciones sexuales</item>
+        <item>En caso de ruptura del preservativo:;*Buscar atención medica antes de las 24 horas;Buscar atención medica en cualquier momento;Intentar arreglarlo;No es necesario hacer nada</item>
     </array>
 </resources>
